Fri Feb  7 17:30:26 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* throw.c (scm_internal_lazy_catch): New function.
	(scm_lazy_catch): Rewritten to use it.
	(scm_ithrow): Handle the new lazy catch representation.
	Use SCM_LAZY_CATCH_P, instead of assuming that any wind list entry
 	that doesn't have a jmpbuf is a lazy catch clause.
	(tc16_lazy_catch, struct lazy_catch, mark_lazy_catch,
	free_lazy_catch, print_lazy_catch, lazy_catch_funs,
	make_lazy_catch, SCM_LAZY_CATCH_P): Support funs, including a new
	smob.
	(scm_init_throw): Register the new lazy-catch smob type.
	* throw.h (scm_internal_lazy_catch): decl for new function.

	* throw.c (scm_internal_catch): Doc fixes.

	* alloca.c: New file, needed to support the AC_FUNC_ALLOCA call in
	configure.in.  Including this might cause problems if applications
	that link against libguile include their own copies of alloca, but
	if they're using autoconf, they should be adding libguile to LIBS
	before calling AC_FUNC_ALLOCA anyway, in which case they'll find
	the copy in libguile, and things will be okay.  (I think.)

Thu Feb  6 03:10:32 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* strop.c (scm_string_upcase_x, scm_string_downcase_x):	moved from
	unif.c.
	strop.h: move prototypes too.

Wed Feb  5 08:33:00 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* posix.c (scm_init_posix): don't intern EINTR since it's now done
	elsewhere.

	* ioext.c (scm_init_ioext): don't intern stat macros, S_IRUSR
	etc.  I deleted them from filesys.c long ago, but didn't
	notice they were here too (although ineffective since 
	sys/stat.h wasn't included).

Tue Feb  4 18:17:50 1997  Tom Tromey  <tromey@cygnus.com>

	* eval.c: Don't define alloca in GCC case.  gcc will automatically
	use __builtin_alloca if appropriate.

Tue Feb  4 16:57:40 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* eval.c (safe_setjmp): New function: trivial wrapper for setjmp.
	(SCM_CEVAL, SCM_APPLY): Call it, instead of setjmp, to make sure